fixed layout issue

--- a/styles/LayoutAdmin.module.css
+++ b/styles/LayoutAdmin.module.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-bottom: none;
+  border-top: none;
 }
 
 @media screen and (min-width: 922px) {
@@ -13,6 +15,7 @@
     margin: 0 auto;
     border: 1px solid var(--color-black);
     border-top: none;
+    border-bottom: none;
   }
 
   .wrapper {
